apache/kustomize/bases/slim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slim
spec:
  #type: LoadBalancer
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: slim
