apache/kustomize/bases/slim/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slim-ingress
spec:
  #ingressClassName: nginx
  rules:
  - host: "example.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: slim
            port:
              number: 80
